# src/main/java/com/projeto/demo/dto/SchedulingCancellationStatsDto.java
@@ -1,0 +1,14 @@
+package com.projeto.demo.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+public class SchedulingCancellationStatsDto {
+
+    private int months;
+    private Long total;
+    private Long cancelled;
+    private double percentage;
+}
